# Odoo

analytics_api/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
analytics_api/alembic/: env.py
analytics_api/alembic/versions/: 20260525_0001_create_security_tables.py
analytics_api/app/: main.py
analytics_api/app/api/: router.py
analytics_api/app/api/v1/: api.py
analytics_api/app/api/v1/endpoints/: auth.py  customers.py  dashboard.py  health.py  invoices.py  leads.py  orders.py  payments.py  products.py
analytics_api/app/core/: config.py  dependencies.py  exceptions.py  logging.py  responses.py  security.py
analytics_api/app/db/: session.py
analytics_api/app/middleware/: request_context.py  security_headers.py
analytics_api/app/models/: odoo.py  security.py
analytics_api/app/repositories/: analytics_repository.py  auth_repository.py
analytics_api/app/schemas/: auth.py  common.py  customer.py  dashboard.py  invoice.py  lead.py  order.py  payment.py  product.py
analytics_api/app/services/: auth_service.py  cache_service.py  customer_service.py  dashboard_service.py  invoice_service.py  lead_service.py  order_service.py  payment_service.py  product_service.py
analytics_api/docker/nginx/: nginx.conf
analytics_api/docker/redis/: redis.conf
analytics_api/docs/: api_examples.md  deployment.md
analytics_api/scripts/: create_admin.py
server/: .gitignore  tmp_setup_moizvonki.py
server/odoo/: release.py
server/odoo/custom_addons/openeducat_custom_timetable/: __manifest__.py
(+112 files in other folders)
